force-app/sfpegSharingGroupUtility/examples/objects/Location/Location.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>