force-app/sfpegSharingGroupUtility/examples/objects/Location/fields/SharingDown__c.field-meta.xml
<CustomField>
    <fullName>SharingDown__c</fullName>
    <label>SharingDown</label>
    <length>18</length>
    <type>Text</type>
</CustomField>