force-app/sfpegSharingGroupUtility/examples/objects/Location/fields/SharingLastEval__c.field-meta.xml
<CustomField>
    <fullName>SharingLastEval__c</fullName>
    <label>SharingLastEval</label>
    <type>DateTime</type>
</CustomField>