force-app/sfpegSharingGroupUtility/examples/objects/Location/fields/SharingLocal__c.field-meta.xml
<CustomField>
    <fullName>SharingLocal__c</fullName>
    <label>SharingLocal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>