force-app/sfpegSharingGroupUtility/examples/objects/Location/fields/SharingToEval__c.field-meta.xml
<CustomField>
    <fullName>SharingToEval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SharingToEval</label>
    <type>Checkbox</type>
</CustomField>