force-app/sfpegSharingGroupUtility/examples/objects/Location/fields/SharingUp__c.field-meta.xml
<CustomField>
    <fullName>SharingUp__c</fullName>
    <label>SharingUp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>